--- a/assets/css/service.css
+++ b/assets/css/service.css
@@ -505,13 +505,13 @@ body {
   .social-button:hover span {
     opacity: 1;
   }
-    
-    
-    
-    
-    
-    
-    
+  /* Hide social buttons on mobile screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+  .social-button {
+    display: none;
+  }
+}
+ 
     
     /*-----------------------------------*\ 
      * #HEADER
