--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1472,33 +1472,22 @@ footer {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000; /* Black background */
+  background: #000;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure it's on top of other elements */
+  z-index: 9999;
 }
 
 #loading-video {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Cover the screen without distorting the aspect ratio */
-}
-
-@media (max-width: 600px) {
-  #loading-video {
-    /* Ensure the video maintains its aspect ratio on smaller screens */
-    width: 100%;
-    height: auto; /* Maintain aspect ratio */
-  }
-
-  
+  object-fit: cover;
 }
 
 #main-content {
-  display: none; /* Hides the main content until loading is complete */
+  display: none;
 }
-
 
 .social-button {
   display: flex;
