--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -468,6 +468,12 @@ body {
   .social-button:hover span {
     opacity: 1;
   }
+  /* Hide social buttons on mobile screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+  .social-button {
+    display: none;
+  }
+}
     
     /*-----------------------------------*\ 
      * #HEADER
