--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -478,6 +478,12 @@ body {
 .social-button:hover span {
   opacity: 1;
 }
+/* Hide social buttons on mobile screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+  .social-button {
+    display: none;
+  }
+}
 
 /*-----------------------------------*\ 
    * #HEADER
@@ -854,5 +860,3 @@ header .container {
 .navbar .btn-primary {
   display: block;
 }
-
-
