--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1027,7 +1027,7 @@ label:hover {
   justify-content: space-around;
   margin-top: 50px;
   padding: 30px 0;
-  background-color: var(--silver-chalice);
+  background-color: bisque;
   border-radius: 10px;
 }
 
